# ComfyChairCpp

./: .gitignore  CMakeLists.txt  CONTRIBUTION.md  Doxyfile  INSTALL.md  LICENSE  README.md  action_scrip.sh
.github/workflow/: QAWorkflow.yml
.github/workflows/: QAWorkflow.yml
include/: SelectionStrategyBest.hpp  SelectionStrategyFixedCut.hpp  articleInterface.hpp  articlePoster.hpp  articleRegular.hpp  bid.hpp  cmdLineArgs.hpp  conference.hpp  conferenceManager.hpp  exampleClass.hpp  itrackState.hpp  review.hpp  reviewer.hpp  selectionStrategy.hpp  selectionStrategyBest.hpp  selectionStrategyFixedCut.hpp  track.hpp  trackFactory.hpp  trackPoster.hpp  trackRegular.hpp  trackStateBidding.hpp  trackStateException.hpp  trackStateInterface.hpp  trackStateReception.hpp  trackStateReview.hpp  trackStateSelection.hpp  trackWorkshop.hpp  user.hpp
src/: SelectionStrategyBest.cpp  articleInterface.cpp  articlePoster.cpp  articleRegular.cpp  bid.cpp  conference.cpp  conferenceManager.cpp  exampleClass.cpp  main.cpp  review.cpp  reviewer.cpp  selectionStrategyBest.cpp  selectionStrategyFixedCut.cpp  track.cpp  trackPoster.cpp  trackRegular.cpp  trackStateBidding.cpp  trackStateReception.cpp  trackStateReview.cpp  trackStateSelection.cpp  trackWorkshop.cpp  user.cpp
tests/: CMakeLists.txt
tests/mocks/: MockArticle.hpp  MockTrackState.hpp
tests/unit/: CMakeLists.txt  article_test.cpp  article_test.hpp  conferenceManager_test.cpp  conferenceManager_test.hpp  conference_test.cpp  conference_test.hpp  exampleClass_test.cpp  exampleClass_test.hpp  reviewer_test.cpp  reviewer_test.hpp  test.json  tir_one.cpp  tir_one.hpp  track_test.cpp  track_test.hpp  user_test.cpp  user_test.hpp
(+4 files in other folders)
